tekton/base/triggers/route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homelab
  namespace: homelab
  labels:
    app.kubernetes.io/instance: homelab
spec:
  ingressClassName: openshift-default
  rules:
    - host: el-homelab.apps.okd.arthurvardevanyan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-webhook
                port:
                  name: http-listener
